// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButton Converter oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "children": Array [
    Object {
      "text": "mockLabel",
    },
  ],
  "content": Object {
    "label": "mockLabel",
    "triggers": Array [
      Object {
        "actions": Array [],
        "type": "onClick",
      },
    ],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`ActionButton Converter oboToSlate converts an OboNode to a Slate node using a textGroup 1`] = `
Object {
  "children": Array [
    Object {
      "text": "mockLabel",
    },
  ],
  "content": Object {
    "textGroup": Array [
      Object {
        "text": Object {
          "value": "mockLabel",
        },
      },
    ],
    "triggers": Array [
      Object {
        "actions": Array [],
        "type": "onClick",
      },
    ],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`ActionButton Converter oboToSlate converts an OboNode to a Slate node with onClick trigger 1`] = `
Object {
  "children": Array [
    Object {
      "text": "mockLabel",
    },
  ],
  "content": Object {
    "label": "mockLabel",
    "triggers": Array [
      Object {
        "actions": Array [
          Object {
            "type": "mockType",
          },
          Object {
            "type": "mockOtherType",
            "value": Object {
              "id": "mockId",
            },
          },
        ],
        "type": "onClick",
      },
    ],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`ActionButton Converter oboToSlate converts an OboNode to a Slate node with triggers 1`] = `
Object {
  "children": Array [
    Object {
      "text": "mockLabel",
    },
  ],
  "content": Object {
    "label": "mockLabel",
    "triggers": Array [
      Object {
        "actions": Array [
          Object {
            "type": "mockType",
          },
          Object {
            "type": "mockOtherType",
            "value": Object {
              "id": "mockId",
            },
          },
        ],
      },
      Object {
        "actions": Array [],
        "type": "onClick",
      },
    ],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`ActionButton Converter slateToObo converts a Slate node 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "textGroup": Array [
      Object {
        "data": null,
        "text": Object {
          "styleList": Array [
            Object {
              "data": Object {},
              "end": 8,
              "start": 0,
              "type": "b",
            },
          ],
          "value": "mockText",
        },
      },
    ],
    "triggers": Array [
      Object {
        "actions": Array [
          Object {
            "type": "mockType",
            "value": "{\\"id\\":\\"mockId\\"}",
          },
          Object {
            "type": "mockType",
            "value": "",
          },
        ],
        "type": "onClick",
      },
    ],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;
